Calculate prediction remainder at proper place (PR tree-optimization/88650).

2019-01-02  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/88650
	* predict.c (set_even_probabilities): Calculate probability
	remainer only when really used.
2019-01-02  Martin Liska  <mliska@suse.cz>

	PR tree-optimization/88650
	* gfortran.dg/predict-3.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@267513 138bc75d-0d04-0410-961f-82ee72b054a4